--- a/_publications/2024_sce.md
+++ b/_publications/2024_sce.md
@@ -5,8 +5,8 @@ category: preprints
 excerpt: 'We consider the problem of estimating a high-dimensional covariance matrix from a small number of observations when covariates on pairs of variables are available and the variables can have spatial structure.'
 date: 2024-10-01
 venue: 'arXiv'
-bibtexurl: 'http://m-crypto645.github.io/files/2024_sce_arxiv.bib'
-paperurl: 'http://m-crypto645.github.io/files/2024_sce_arxiv.pdf'
+bibtexurl: 'http://m-metodiev.github.io/files/2024_sce_arxiv.bib'
+paperurl: 'http://m-metodiev.github.io/files/2024_sce_arxiv.pdf'
 citation: 'Metodiev, M., Perrot-Dockès, M., Ouadah, S., Fosdick, B. K., Robin, S., Latouche, P., & Raftery, A. E. (2024). A Structured Estimator for large Covariance Matrices in the Presence of Pairwise and Spatial Covariates. arXiv preprint arXiv:2411.04520.'
 ---
 
